--- a/cookies.html
+++ b/cookies.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coin Gangster</title>
-    <link rel="icon" href="img/fav b.jpg" />
+    <title>Magic Cat Match</title>
+    <link rel="icon" href="image/image.png" />
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -18,7 +18,11 @@
         <ul class="navigation__list">
           <li class="navigation__item">
             <a href="/" class="navigation__link"
-              ><img href="/" class="header-title navigation-img" alt=""
+              ><img
+                href="/"
+                class="header-title navigation-img"
+                alt=""
+                src="image/header/Untitled-1 1.png"
             /></a>
           </li>
           <li class="navigation__item">
@@ -28,7 +32,7 @@
             <a href="/#about" class="navigation__link">About us</a>
           </li>
           <li class="navigation__item">
-            <a href="/#features" class="navigation__link">Benefits </a>
+            <a href="/#features" class="navigation__link">Benefits</a>
           </li>
           <li class="navigation__item">
             <a href="/#gallery" class="navigation__link">Gallery</a>
@@ -37,7 +41,6 @@
           <li class="navigation__item">
             <a href="/#faq" class="navigation__link">FAQ</a>
           </li>
-
           <li class="navigation__item">
             <a
               href="/policy.html"
@@ -61,19 +64,23 @@
 
         <div class="header__button-wrapper policy-terms-header__button-wrapper">
           <a href="/" class="policy-terms-header__icon--menu"
-            ><img href="/" class="header-title" alt=""
+            ><img
+              href="/"
+              class="header-title"
+              alt=""
+              src="image/header/Untitled-1 1.png"
           /></a>
 
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="img/header/menu.png"
+              src="image/header/Frame 1 (1).png"
               alt=""
             />
 
             <img
               class="header__icon header__icon--close close"
-              src="img/header/ep_close-bold.png"
+              src="image/header/🦆 icon _close outline_.png"
               alt=""
             />
           </button>
@@ -86,7 +93,7 @@
         <div class="policy-terms-container">
           <h2 class="policy-terms-title">Cookies Policy</h2>
 
-          <p class="policy-terms-text-one">Last updated: January 30, 2025</p>
+          <p class="policy-terms-text-one">Last updated: January 28, 2025</p>
 
           <p class="policy-terms-text-one">
             This Cookies Policy explains what Cookies are and how We use them.
@@ -129,19 +136,20 @@
           </p>
           <ul class="terms-lists">
             <li>
-              ·Company (referred to as either "the Company", "We", "Us" or "Our"
-              in this Cookies Policy) refers to Perfect Blast.
+              Company (referred to as either "the Company", "We", "Us" or "Our"
+              in this Cookies Policy) refers to the Magic Cat Mat.
             </li>
             <li>
-              ·Cookies means small files that are placed on Your computer,
-              mobile device or any other device by a website, containing details
-              of your browsing history on that website among its many uses.
+              Cookies means small files that are placed on Your computer, mobile
+              device or any other device by a website, containing details of
+              your browsing history on that website among its many uses.
             </li>
             <li>
-              · Website refers to Coin Gangster, accessible from joyblazehub.com
+              Website refers to the Magic Cat Mat, accessible
+              from winnerprohub.com
             </li>
             <li>
-              ·You means the individual accessing or using the Website, or a
+              You means the individual accessing or using the Website, or a
               company, or any legal entity on behalf of which such individual is
               accessing or using the Website, as applicable.
             </li>
@@ -271,9 +279,9 @@
           <h2 class="policy-terms-text">Contact Us</h2>
           <p class="policy-terms-texts">
             If you have any questions about this Cookies Policy, You can contact
-            us:
-            <a class="email-link" href="mailto:info@joyblazehub.com"
-              >info@joyblazehub.com</a
+            us: By email: 
+            <a class="email-link" href="mailto:info@winnerprohub.com"
+              >info@winnerprohub.com</a
             >.
           </p>
         </div>
@@ -281,17 +289,23 @@
     </main>
 
     <footer class="footer">
+      <img src="/image/footer/Untitled-1 3.png" alt="" />
+      <a
+        class="footer_link"
+        href="https://play.google.com/store/apps/details?id=com.cookapps.magiccatmatch&hl=en&gl=us"
+        target="_blank"
+      >
+        <img class="footer_image" src="./image/footer/button.png" alt="" />
+      </a>
       <div class="footer-container">
-        <p class="footer-copyright">
-          ©2025 joyblazehub.com, All rights reserved.
-        </p>
         <div class="footer-wrapper">
           <a class="footer-text" href="policy.html">Privacy policy</a>
-          <a class="footer-text">/</a>
-          <a class="footer-text" href="terms.html">Terms and conditions </a>
-          <a class="footer-text">/</a>
+          <a class="footer-text" href="terms.html">Terms of service</a>
           <a class="footer-text" href="cookies.html">Cookies Policy</a>
         </div>
+        <p class="footer-copyright">
+          All rights reserved winnerprohub.com | 2025
+        </p>
       </div>
     </footer>
     <script src="js/mobile-menu.js"></script>
